restructured and added hadron suppresion, jet profile

--- a/hicollisions.tex
+++ b/hicollisions.tex
@@ -4,13 +4,13 @@
 
 Heavy ion collisions are a tool that can be used as a tool to study the quark-gluon plasma (QGP) \cite{SHURYAK198071}.
 In a heavy ion collision, the colliding nuclei are accelerated to relativistic energies and due to relativistic length contraction, form discs.
-In the case of a \pbpb\ collision, the relativistic $\gamma$ factor is approximately 3000. 
+In the case of a \pbpb\ collision, the relativistic $\gamma$ factor is approximately 3000.
 Each nucleus contains many colored quarks and antiquarks, with three more quarks than anti-quarks per nucleon, with the $q\bar{q}$ popping in and out of the vacuum due to quantum fluctuations.
 These $q\bar{q}$ pairs are sources of transverse color fields and the corresponding force carriers, the gluons.
 
 %move to jets?
-%The probability distributions of these partons within a proton are given by the parton distribution functions (PDFs) \cite{Placakyte:2011az}. 
-%These PDFs given as $f(x, Q^2)$ and shown in Figure~\ref{fig:pdfs} are functions of the longitudinal momentum fraction $x$ and the scale of the hard interaction, $Q$. 
+%The probability distributions of these partons within a proton are given by the parton distribution functions (PDFs) \cite{Placakyte:2011az}.
+%These PDFs given as $f(x, Q^2)$ and shown in Figure~\ref{fig:pdfs} are functions of the longitudinal momentum fraction $x$ and the scale of the hard interaction, $Q$.
 %They are determined via fits to data from Deep Inelastic Scattering experiments and form the cornerstone of any theoretical prediction for hadron colliders.
 %
 %\begin{figure}[htbp]
@@ -28,7 +28,7 @@ When these pancake-like discs collide, their color fields interact and there is 
 %\begin{align}
 %\varepsilon = \frac{1}{A_{\rm{T}} t} \frac{d \Et}{dy}
 %\end{align}
-%where $A_\rm{T}$ represents the transverse overlap area and $d\Et/dy$ is the transverse energy per unit rapidity (see Section~\ref{sec:quantities} for a definition of rapidity). 
+%where $A_\rm{T}$ represents the transverse overlap area and $d\Et/dy$ is the transverse energy per unit rapidity (see Section~\ref{sec:quantities} for a definition of rapidity).
 %where $d\Nch/d\eta$ is the number of charged particles produced per unity pseudorapidity, $d\Et/d\eta$ is the transverse energy per unit pseudorapidity, $\tau_0$ is the thermalization time, $R$ is the nuclear radius, and $\Et/N \approx 1$ GeV is the transverse energy per emitted particle.
 %As shown in Figure~\ref{fig:energyDensity}, the energy density at the LHC was measured to be approximately 15 $\mathrm{GeV} / \mathrm{fm}^3$, much higher than the values measured at RHIC \cite{Adcox:2004mh, Krajcz_r_2011}.
 %
@@ -111,7 +111,7 @@ Figure taken from Ref.~\cite{doi:10.1146/annurev.nucl.57.090506.123020}.}
 \end{figure}
 
 They are then arranged with a random impact parameter $b$ based on the distribution $d\sigma/d b = 2\pi b$ and projected onto the $x-y$ plane as shown in Figure~\ref{fig:glauberMC}.
-They are then made to travel on straight trajectories, colliding if $d \leq \sqrt{\sigma_{\mathrm{inel}}^{\mathrm{NN}}/ \pi}$, where $d$ is the distance between the nucleons in a plane transverse to the beam axis and $\sigma_{\mathrm{inel}}^{\mathrm{NN}}$ is the inelastic scattering cross section. \cite{doi:10.1146/annurev.nucl.57.090506.123020, Alver:2008aq}
+They are then made to travel on straight trajectories, colliding if $d \leq \sqrt{\sigma_{\mathrm{inel}}^{\mathrm{NN}}/ \pi}$, where $d$ is the distance between the nucleons in a plane transverse to the beam axis and $\sigma_{\mathrm{inel}}^{\mathrm{NN}}$ is the inelastic scattering cross section \cite{doi:10.1146/annurev.nucl.57.090506.123020, Alver:2008aq}.
 
 \begin{figure}[htbp]
 \begin{center}
