--- a/jetMeasurements.tex
+++ b/jetMeasurements.tex
@@ -2,8 +2,7 @@
 % !TEX root = thesis-ex.tex
 
 This chapter shall discuss some important experimental jet measurements that contextualize and motivate the study of the main analysis in this thesis.
-These include the study of the jet yields, dijet asymmetry, and jet fragmentation.
-Before delving into the measurements however, there is a discussion of some common kinematic quantities, as well as a discussion of some jet reconstruction algorithms.
+These include the study of the hadron yields, dijet balance, jet yields, jet fragmentation, and jet profiles.
 
 %\section{Common Kinematic Quantities}
 %\label{sec:jet_kinematics}
@@ -12,6 +11,10 @@ Before delving into the measurements however, there is a discussion of some comm
 %\section{Jet Reconstruction}
 %\label{sec:jet_reconstruction}
 %\input{jet_reconstruction.tex}
+
+\section{Hadron Suppresion}
+\label{sec:hadron_suppresion}
+\input{jet_hadronSupp.tex}
 
 \section{Dijet Balance: $\mathrm{x}_{J}$}
 \label{sec:xj}
@@ -24,6 +27,10 @@ Before delving into the measurements however, there is a discussion of some comm
 \section{Jet Fragmentation}
 \label{sec:jet_ff}
 \input{jet_ff.tex}
+
+\section{Jet Profile}
+\label{sec:jet_shape}
+\input{jet_profile.tex}
 
 
 
