--- a/jet_xj.tex
+++ b/jet_xj.tex
@@ -1,7 +1,7 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = thesis-ex.tex
 
-This section will discuss the dijet balance for $R = 0.4$ jets as measured by ATLAS detector for \pbpb\ collisions at \sqrtsnn = 2.76 TeV \cite{Aaboud:2017eww}.
+This section will discuss the dijet balance as measured by the ATLAS detector for \pbpb\ collisions at $\sqrtsnn = 2.76$ TeV \cite{Aaboud:2017eww}.
 The dijet imbalance can be expressed in terms of $x_J$ defined as
 
 \begin{align}
@@ -32,18 +32,21 @@ Figures taken from \cite{Aaboud:2017eww}.}
 \end{center}
 \end{figure}
 
-Further measurements of $R = 0.3$ jets are shown in Figure~\ref{fig:xJ_R03}.
-These distributions are significantly flatter than the ones for $R=0.4$ jets, an observation that is consistent with the expectation that the transverse momenta correlation between the dijet pair is weaker for jets with smaller radii due to radiation that is outside the nominal jet cone.
+It is further seen that narrower jets are flatter than wider jets.
+%Further measurements of $R = 0.3$ jets are shown in Figure~\ref{fig:xJ_R03}.
+This is consistent with the expectation that the transverse momenta correlation between the dijet pair is weaker for jets with smaller radii due to radiation that is outside the nominal jet cone.
 
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/xJ_R03}
-\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.3$ jets as a function of $x_J$ in \pp\ and central \pbpb\ collisions.
-The different panels are for different, $\pt_1$ ranges (top left to bottom right) central and (bottom) peripheral collisions.
-The \pbpb\ data is in red circles while the \pp\ data is in blue diamonds and is the same in all panels.
-The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties.
-Figures taken from \cite{Aaboud:2017eww}.}
-\label{fig:xJ_R03}
-\end{center}
-\end{figure}
+%These distributions are significantly flatter than the ones for $R=0.4$ jets, an observation that is consistent with the expectation that the transverse momenta correlation between the dijet pair is weaker for jets with smaller radii due to radiation that is outside the nominal jet cone.
 
+%\begin{figure}[htbp]
+%\begin{center}
+%\includegraphics[width=0.55\textwidth]{figures/jetMeasurements/xJ_R03}
+%\caption{The $1/N_\mathrm{jets} dN/dx_J$ distributions for $R=0.3$ jets as a function of $x_J$ in \pp\ and central \pbpb\ collisions.
+%The different panels are for different, $\pt_1$ ranges (top left to bottom right) central and (bottom) peripheral collisions.
+%The \pbpb\ data is in red circles while the \pp\ data is in blue diamonds and is the same in all panels.
+%The statistical uncertainties are indicated by the bars while the boxes indicate the systematic uncertainties.
+%Figures taken from \cite{Aaboud:2017eww}.}
+%\label{fig:xJ_R03}
+%\end{center}
+%\end{figure}
+%
