--- a/macros.tex
+++ b/macros.tex
@@ -91,7 +91,7 @@
 
 \newcommand{\ANpart}{\mbox{$\langle N_{\mathrm{part}}\rangle$}}
 \newcommand{\Ncoll}{\mbox{$N_{\mathrm{coll}}$}}
-%\newcommand{\Nevt}{\mbox{$N_{\mathrm{evt}}$}}
+\newcommand{\Nevt}{\mbox{$N_{\mathrm{evt}}$}}
 \newcommand{\Ncone}{\mbox{$N_{\mathrm{cone}}$}}
 \newcommand{\Njetcent}{\mbox{$N_{\mathrm{jet}}^{\mathrm{cent}}$}}
 \newcommand{\Njet}{\mbox{$N_{\mathrm{jet}}$}}
@@ -167,7 +167,7 @@
 \newcommand{\pTjet}{\mbox{$p_{{\mathrm{T}}}$}}
 \newcommand{\pTjetcorr}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{corr}}$}}
 \newcommand{\pTch}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{ch}}$}}
-\newcommand{\pTtrk}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{ch}}$}}
+\newcommand{\pTtrk}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{trk}}$}}
 \newcommand{\pttrk}{\mbox{$p_{\mathrm{T}}^{\mathrm{ch}}$}}
 %\newcommand{\pttrk}{\mbox{$p_{\mathrm{T}}^{\mathrm{trk}}$}}
 %\newcommand{\pTtrk}{\mbox{$p_{{\mathrm{T}}}^{\mathrm{trk}}$}}
