--- a/qcd.tex
+++ b/qcd.tex
@@ -76,7 +76,8 @@ This running coupling phenomenon leads to two key behaviors: asymptotic freedom 
 \subparagraph{Asymptotic Freedom: }
 At high energy scales (small distances), the QCD coupling constant $\alpha_s$ is small and tends to zero, implying a free particle behavior of quarks and gluons\cite{PhysRevLett.30.1343, PhysRevD.8.3633}.
 This has been observed by a variety of deep inelastic scattering (DIS) experiments \cite{Deur:2014vea, Kim:1998kia, Altarelli:1996nm, RevModPhys.63.597, Kataev:2001kk, Alekhin:2012ig, Alekhin:2013nua, Blumlein:2006be, Aaron:2007xx, Chekanov:2007pa, Chekanov:2008af, Abramowicz:2010cka, Abramowicz:2010ke, Aaron:2009vs}.
-These scattering experiments shown in Figure~\ref{fig:dis_schematic}, probe the interior of a nucleon using highly energetic leptons like electrons. The electron scatters off of the target proton, producing a lepton and a hadron shower. Bu 
+These scattering experiments shown in Figure~\ref{fig:dis_schematic}, probe the interior of a nucleon using highly energetic leptons like electrons.
+The electron scatters off of the target proton, producing a lepton and a hadron shower.
 First done by MIT-SLAC \cite{PhysRevLett.23.930, PhysRevLett.23.935}, these DIS experiments showed the weak $Q^2$ dependence on the inelastic scattering cross-sections, as well as Bjorken scaling \cite{PhysRev.179.1547}, where the proton structure functions are independent of the momentum transfer.
 These experiments revealed the point-like constituents of the proton and paved the road to an asymptotically free theory.
 
