--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,5 +1,166 @@
 % !TEX root = thesis-ex.tex
 % !TEX encoding = UTF-8 Unicode
+
+@techreport{Potamianos:2209070,
+author        = "Potamianos, Karolos",
+title         = "{The upgraded Pixel detector and the commissioning of the
+Inner Detector tracking of the ATLAS experiment for Run-2
+at the Large Hadron Collider}",
+institution   = "CERN",
+collaboration = "ATLAS Collaboration",
+address       = "Geneva",
+number        = "ATL-PHYS-PROC-2016-104",
+month         = "Aug",
+year          = "2016",
+reportNumber  = "ATL-PHYS-PROC-2016-104",
+url           = "https://cds.cern.ch/record/2209070",
+note          = "15 pages, EPS-HEP 2015 Proceedings",
+}
+
+@article{PhysRevLett.119.062301,
+title = {Dijet imbalance measurements in \AuAu\ and $pp$ collisions at $\sqrt{{s}_{NN}}=200$ GeV at STAR},
+author = "{STAR Collaboration}",
+collaboration = {STAR Collaboration},
+journal = {Phys. Rev. Lett.},
+volume = {119},
+issue = {6},
+pages = {062301},
+numpages = {7},
+year = {2017},
+month = {Aug},
+publisher = {American Physical Society},
+doi = {10.1103/PhysRevLett.119.062301},
+url = {https://link.aps.org/doi/10.1103/PhysRevLett.119.062301}
+}
+
+
+
+@article{20151,
+title = "Measurement of jet suppression in central Pb–Pb collisions at $\sqrtsnn=2.76$ TeV",
+journal = "Physics Letters B",
+volume = "746",
+pages = "1 - 14",
+year = "2015",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2015.04.039",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269315002828",
+author = "{ALICE Collaboration}",
+}
+
+@article{Reed_2013,
+doi = {10.1088/1742-6596/446/1/012006},
+url = {https://doi.org/10.1088%2F1742-6596%2F446%2F1%2F012006},
+year = 2013,
+month = {sep},
+publisher = {{IOP} Publishing},
+volume = {446},
+pages = {012006},
+author = {Rosi Reed},
+title = {Full Jet Reconstruction in 2.76 {TeV} pp and Pb-Pb collisions in the {ALICE} experiment},
+journal = {Journal of Physics: Conference Series},
+}
+
+@article{Ploskon:2009zd,
+author         = "Ploskon, Mateusz",
+title          = "{Inclusive cross section and correlations of fully
+reconstructed jets in $\sqrtsnn= 200$ GeV \AuAu\ and \pp\ collisions}",
+booktitle      = "{Proceedings, 21st International Conference on
+Ultra-Relativistic nucleus nucleus collisions (Quark
+matter 2009): Knoxville, USA, March 30-April 4, 2009}",
+collaboration  = "STAR",
+journal        = "Nucl. Phys.",
+volume         = "A830",
+year           = "2009",
+pages          = "255C-258C",
+doi            = "10.1016/j.nuclphysa.2009.10.095",
+eprint         = "0908.1799",
+archivePrefix  = "arXiv",
+primaryClass   = "nucl-ex",
+SLACcitation   = "%%CITATION = ARXIV:0908.1799;%%"
+}
+
+@article{PhysRevLett.109.152302,
+title = {Measurement of Direct Photons in \AuAu\ Collisions at $\sqrtsnn = 200$ GeV},
+author = "{PHENIX Collaboration}",
+collaboration = {PHENIX Collaboration},
+journal = {Phys. Rev. Lett.},
+volume = {109},
+issue = {15},
+pages = {152302},
+numpages = {7},
+year = {2012},
+month = {Oct},
+publisher = {American Physical Society},
+doi = {10.1103/PhysRevLett.109.152302},
+url = {https://link.aps.org/doi/10.1103/PhysRevLett.109.152302}
+}
+
+
+
+@article{PhysRevD.19.764,
+title = {Production of hadrons at large transverse momentum in 200, 300, and 400 GeV $pp$ and $p$-nucleus collisions},
+author = {Antreasyan, D. and Cronin, J. W. and Frisch, H. J. and Shochet, M. J. and Kluberg, L. and Pirou\'e, P. A. and Sumner, R. L.},
+journal = {Phys. Rev. D},
+volume = {19},
+issue = {3},
+pages = {764--778},
+numpages = {0},
+year = {1979},
+month = {Feb},
+publisher = {American Physical Society},
+doi = {10.1103/PhysRevD.19.764},
+url = {https://link.aps.org/doi/10.1103/PhysRevD.19.764}
+}
+
+
+@article{ANGELIS1987213,
+title = "Large transverse momentum $\pi^0$ production in $\alpha\alpha$, $dd$ and $pp$ collisions at the CERN ISR",
+journal = "Physics Letters B",
+volume = "185",
+number = "1",
+pages = "213 - 217",
+year = "1987",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(87)91557-7",
+url = "http://www.sciencedirect.com/science/article/pii/0370269387915577",
+author = "{ISR Collaboration}"
+}
+
+@article{PhysRevC.64.034901,
+  title = {Interplay of soft and hard processes and hadron ${p}_{T}$ spectra in $\mathrm{pA}$ and $\mathrm{AA}$ collisions},
+  author = {Wang, Enke and Wang, Xin-Nian},
+  journal = {Phys. Rev. C},
+  volume = {64},
+  issue = {3},
+  pages = {034901},
+  numpages = {8},
+  year = {2001},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.64.034901},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.64.034901}
+}
+
+
+
+@article{PhysRevLett.88.022301,
+  title = {Suppression of Hadrons with Large Transverse Momentum in Central $Au+Au$ Collisions at $\sqrtsnn = 130 \mathrm{GeV}$},
+  author = "{PHENIX Collaboration}",
+  collaboration = {PHENIX Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {88},
+  issue = {2},
+  pages = {022301},
+  numpages = {6},
+  year = {2001},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.88.022301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.88.022301}
+}
+
+
+
 @article{ARNISON1983214,
 title = "Hadronic jet production at the CERN proton-antiproton collider",
 journal = "Physics Letters B",
@@ -2895,20 +3056,6 @@ year          = "2018",
 nourl           = "https://cds.cern.ch/record/2318869",
 }
 
-@article{Sirunyan:2018jqr,
-author         = "Sirunyan, Albert M and others",
-title          = "{Jet properties in PbPb and pp collisions at
-$\sqrt{s_\mathrm{NN}} =$ 5.02 TeV}",
-collaboration  = "CMS",
-year           = "2018",
-eprint         = "1803.00042",
-archivePrefix  = "arXiv",
-primaryClass   = "nucl-ex",
-reportNumber   = "CMS-HIN-16-020, CERN-EP-2018-011, CMS-HIN-16-020,
-CERN-EP-2018-011",
-SLACcitation   = "%%CITATION = ARXIV:1803.00042;%%"
-}
-
 @article{PbPb5TeVIntNote,
 author = "Rybar, M and Sickles, A and Puri, A",
 nourl = "https://cds.cern.ch/record/2235420",
@@ -3214,19 +3361,23 @@ primaryClass   = "hep-ex",
 reportNumber   = "CERN-EP-2017-045",
 SLACcitation   = "%%CITATION = ARXIV:1704.07983;%%"
 }
+
 @article{Sirunyan:2018jqr,
-author         = "{CMS Collaboration}",
-title          = "{Jet properties in PbPb and pp collisions at
-$\sqrt{s_\mathrm{NN}} =$ 5.02 TeV}",
+author         = "Sirunyan, Albert M and others",
+title          = "{Jet properties in PbPb and pp collisions at $\sqrt{s_\mathrm{NN}} =$ 5.02 TeV}",
 collaboration  = "CMS",
+journal        = "JHEP",
+volume         = "05",
 year           = "2018",
+pages          = "006",
+doi            = "10.1007/JHEP05(2018)006",
 eprint         = "1803.00042",
 archivePrefix  = "arXiv",
 primaryClass   = "nucl-ex",
-reportNumber   = "CMS-HIN-16-020, CERN-EP-2018-011, CMS-HIN-16-020,
-CERN-EP-2018-011",
+reportNumber   = "CMS-HIN-16-020, CERN-EP-2018-011",
 SLACcitation   = "%%CITATION = ARXIV:1803.00042;%%"
 }
+
 @article{Chatrchyan:2013kwa,
 author         = "{CMS Collaboration}",
 title          = "{Modification of jet shapes in PbPb collisions at $\sqrt
