--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -96,7 +96,7 @@ For my Mother, Father, and Brother
 % The thesis format requires the Table of Contents to come
 % before any other major sections, all of these sections after
 % the Table of Contents must be listed therein (i.e., use \chapter,
-% not \chapter*).  Common sections to have between the Table of
+% not \chapter*).Common sections to have between the Table of
 % Contents and the main text are:
 %
 % List of Tables
@@ -116,12 +116,12 @@ For my Mother, Father, and Brother
 %% \listoftables
 %% \listoffigures
 %
-%%% Create a List of Abbreviations. The left column
+%%% Create a List of Abbreviations.The left column
 %%% is 1 inch wide and left-justified
 %\chapter{List of Abbreviations}
 %\input{abbreviations.tex}
 %
-%%% Create a List of Symbols. The left column
+%%% Create a List of Symbols.The left column
 %%% is 0.7 inch wide and centered
 %\chapter{List of Symbols}
 %\input{symbols.tex}
@@ -148,11 +148,11 @@ For my Mother, Father, and Brother
 \input{jetModels.tex}
 \clearpage
 
-%\chapter{Experimental Setup}
-%\label{sec:setup}
-%\input{setup.tex}
-%\clearpage
-%
+\chapter{LHC and the ATLAS Detector}
+\label{sec:setup}
+\input{setup.tex}
+\clearpage
+
 %\chapter{ATLAS Qualification Task}
 %\label{sec:qualification}
 %\input{qualification.tex}
