--- a/cuts_corrections.tex
+++ b/cuts_corrections.tex
@@ -96,7 +96,7 @@ The cuts used here are the ``tight" cuts as described in Ref.~\cite{ref:tracktwi
   	This was chosen to guarantee a smooth behavior of the $d_{0}$ parameter as a function of track momentum. }
 \item{ An additional cut on the track to jet \pT\ ratio is included. All tracks with 
 \begin{equation}
-\pTtrk >  \ptjet + \sqrt{ (3 \times \sigma_{\mathrm{JER}}(\ptjet))^2 + (3 \times \sigma_{\mathrm{TMR}}(\pTtrk))^2} 
+\pTch >  \ptjet + \sqrt{ (3 \times \sigma_{\mathrm{JER}}(\ptjet))^2 + (3 \times \sigma_{\mathrm{TMR}}(\pTch))^2} 
 \end{equation}
 are rejected from the analysis. Where the TMR stands for track momentum resolution. The purpose of this cut is to be consistent with previous fragmentation measurements ~\cite{PhysRevC.98.024908}. It has minimal impact on this analysis because it is restricted to tracks below 63 GeV and jets above 100 GeV. }
 \end{itemize}
